Spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -101,7 +101,7 @@ ul.fish-list li img{
   width: 100%;
 }
 .single-fish-page .description{
-  padding: 50px;
+  padding: 15px 50px 50px 50px;
 }
 .btn{
   font-family: 'Lato';
